# dummy-spatialdata

./: README.md  dummy_spatialdata-0.1.0-py3-none-any.whl  pyproject.toml  requirements.txt
docs/notebooks/: full_script.py  generate_examples.ipynb  generate_examples.py  generate_polygons.ipynb  main.ipynb  tests.ipynb  transformations.ipynb
docs/notebooks/blobs.zarr/: zarr.json
src/dummy_spatialdata/: __init__.py  generage_imagemodel.py  generate_dataset.py  generate_imagemodel.py  generate_labelmodel.py  generate_pointmodel.py  generate_shapemodel.py  generate_table.py  generate_tablemodel.py  generate_transformations.py  utils.py
tests/: test_basic.py  test_models.py  test_transformations.py
