[build-system]
requires = ["hatchling>=1.24"]
build-backend = "hatchling.build"

[project]
name = "dummy-spatialdata"
version = "0.1.7"
description = "A package for creating arbitrary spatialdata for testing purposes."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [
  { name = "Artür Manukyan", email = "amanukyan.umms@gmail.com" }
]
# This dependency setting is compatible with both spatialdata == 0.5.0 (zarr v2) and 0.7.2 (zarr v3)
# 
# please use 
#   conda create --name dummy_sd_env python==3.12 spatialdata==0.7.2 (zarr v2)
#   or 
#.  conda create --name dummy_sd_env_05 python==3.12 spatialdata==0.5.0 setuptools==75.8.0
dependencies = [
  "requests",
  "pillow",
  "spatialdata>=0.5.0",
  "dummy-anndata>=0.0.3",
  "geopandas",
  "shapely",
]
optional-dependencies.dev = [
  "pre-commit",
  "twine>=4.0.2",
]
optional-dependencies.test = [
  "coverage",
  "pytest",
]
# https://docs.pypi.org/project_metadata/#project-urls
urls.Documentation = "https://dummy-spatialdata.readthedocs.io/"
urls.Homepage = "https://github.com/BIMSBBioinfo/dummy-spatialdata"
urls.Source = "https://github.com/BIMSBBioinfo/dummy-spatialdata"

[tool.hatch.envs.hatch-test]
features = [ "test" ]

[tool.hatch.build.targets.wheel]
only-include = ["src/dummy_spatialdata", "examples"]

[tool.hatch.build.targets.wheel.sources]
"src" = ""
"examples" = "dummy_spatialdata/examples"

[tool.hatch.build.targets.sdist]
include = [
  "/src",
  "/README.md",
  "/LICENSE",
  "/examples/*",
  "/tests"
]

[tool.hatch.metadata]
allow-direct-references = true
